# Subtask

./: Cargo.toml  LICENSE  README.md  Subchain.sln
Subchain.Application/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Subchain.Application.csproj  app.manifest
Subchain.Application/Properties/: launchSettings.json
Subchain.Desktop/: App.xaml  App.xaml.cs  Subchain.Desktop.csproj  app.manifest
Subchain.Desktop/Helpers/: EnumToBooleanConverter.cs
Subchain.Desktop/Models/: AppConfig.cs  DataColor.cs
Subchain.Desktop/Resources/: Translations.cs
Subchain.Desktop/Services/: ApplicationHostService.cs  PageService.cs
Subchain.Desktop/Themes/: Generic.xaml
Subchain.Desktop/ViewModels/Controls/: RoleNavigationViewModel.cs
Subchain.Desktop/ViewModels/Pages/: RoleViewModel.cs  SettingsViewModel.cs  TodayViewModel.cs
Subchain.Desktop/ViewModels/Windows/: MainWindowViewModel.cs
Subchain.Desktop/Views/Controls/: RoleNavigationViewItem.cs
Subchain.Desktop/Views/Pages/: RolePage.xaml  RolePage.xaml.cs  SettingsPage.xaml  (+3 more)
Subchain.Tasks/: Enumerations.cs  Role.cs  Task.cs
Subchain.Tasks.Test/: Subchain.Tasks.Test.csproj  TasksTest.cs
src/: app.rs  debug.rs  help.rs  main.rs  task.rs  task_list.rs  task_list_controller.rs  tasks.rs  ui.rs
src/app/: actions.rs  events.rs  render.rs
src/task/: render.rs
src/task_list/: actions.rs  index.rs  render.rs  state.rs
src/task_list_controller/: events.rs  render.rs  state.rs
src/tasks/: enums.rs  list.rs  task.rs  task_list.rs
src/ui/: help.rs  home.rs  joiner.rs
(+2 files in other folders)
