[package]
name = "Subtask"
version = "0.0.1"
edition = "2021"
authors = ["Nick Boey <nick-boey@users.noreply.github.com>"]
license = "MIT"

[dependencies]
chrono = "0.4.38"
ratatui = "0.29.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
tui-input = "*"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "6.0.0"
lazy_static = "1.5.0"

[dependencies.uuid]
version = "1.11.0"
features = ["v4"]
